Set the desktop view with media queries
Co-authored-by: BrendaVielmas <breen.vielmas@gmail.com>
Co-authored-by: EduJimenez96 <ejimenez10@ucol.mx>

--- a/main.css
+++ b/main.css
@@ -267,6 +267,23 @@ input:focus {
     margin: 3%;
 }
 @media (min-width: 1440px) {
+    .statisticsSection > div {
+    width: 40px;
+}
+    .navbutton{
+        display: none;
+    }
+    
+    .hide{
+        display: block;
+    }
 
+    .section1Img {
 
+    }
+
+    .section1Info {
+
+    }
+    
 }
