--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ body {
 .navbar1 li, .navbar2 li{
     padding: 10px 0px 10px 0px;
 }
-hr{
+.linea_menu{
     background-color:white;
     width:80%;
 }
@@ -178,9 +178,6 @@ hr{
     -webkit-border-radius: 67px 67px 67px 67px;
     border: 0px solid #000000;
 }
-/*.start:hover {
-    opacity: 0.6;
-}*/
 
 .shorterSection {
     background-color: hsl(257, 27%, 26%);
@@ -221,10 +218,14 @@ input:focus {
     border: 0px solid #ffffff;
 }
 
-input.shorter:required{
+/*
+    input.shorter:required{
     border: 3px solid hsl(0, 87%, 67%);
     color: hsl(0, 87%, 67%);
-}
+    }
+
+*/
+
 
 .shortButton {
     background-color: hsl(180, 66%, 49%);
@@ -251,42 +252,6 @@ input.shorter:required{
     .logo{
         margin-top:3%;
     }
-<<<<<<< HEAD
-
-    .headerSection{
-        margin: 0 auto;
-        width:90%;
-    }
-
-    .hideButton{
-        display: none;
-    }
-    
-    .navbar-container {
-        padding: 0px 10px 0px 10px;
-        background-color: white;
-        color: hsl(257, 7%, 63%);
-        border-radius: 10px;
-        width: 90%;
-    }
-
-    .navbar-container a{
-        color: hsl(257, 7%, 63%);
-    }
-
-    .navbar1{
-        width: 40%;
-        float:left;
-        margin: -3% 0% 0% 5%;
-    }
-
-    .navbar2{
-        float:right;
-        width:60%;
-        margin: -3% -24% 0% 0%;
-    }
-
-=======
 
     .headerSection{
         margin: 0 auto;
@@ -325,7 +290,6 @@ input.shorter:required{
         margin-left:-5%;
     }
 
->>>>>>> 5efbd88... desktop design modifications and api function
     .navbar1, .navbar2 {
         list-style: none;
         text-align: center;
@@ -336,36 +300,22 @@ input.shorter:required{
         display: inline;
         padding: 0% 5% 0% 5%;
     }
-<<<<<<< HEAD
 
-    hr{
+    .linea_menu{
         display:none;
     }
 
     .signUpBtn{
         padding: 2% 2%;
-=======
+    }
     .navbar2 .signUpBtn{
         padding: 2% 4%;
->>>>>>> 5efbd88... desktop design modifications and api function
         color: white;
     }
 
     .hide{
         display: block;
     }
-<<<<<<< HEAD
-    .hide2 {
-        /*display: block;*/
-    }
-    /*
-    .section1 {
-        display: flex;
-        flex-direction: column;
-    }
-    */
-=======
->>>>>>> 5efbd88... desktop design modifications and api function
 
     .section1Info {
         width: 45%;
@@ -374,6 +324,9 @@ input.shorter:required{
         padding: 10px 30px 10px 30px;
         margin-bottom: 20px;
         margin-top: 20px;
+    }
+    .section1{
+        margin-bottom: 0;
     }
     .section1Img {
         width: 45%;
@@ -384,22 +337,10 @@ input.shorter:required{
         width: 90%;
         position: relative;
         height: auto;
-<<<<<<< HEAD
-        display: flex;
-        flex-direction: row;
-    }
-    .shorter {
-        width: 100%;
-        height: 50px;
-        padding: 5px 5px 5px 5px;
-    }
-    .shortButton {
-        width: 20%;
-        height: 50px;
-=======
         display:inline-block;
+        margin: 5% 0 0 0;
     }
-    .shorter {
+    .shorter {                                                           
         width: 72%;
         height: 50px;
         margin: 5% 1% 0% 5%;
@@ -409,17 +350,11 @@ input.shorter:required{
         width: 15%;
         height: 65px;
         margin: 5% 5% 0% 0%;
->>>>>>> 5efbd88... desktop design modifications and api function
         padding: 5px 5px 5px 5px;
     }
     .shortButton:hover {
         opacity: 0.6;
     }
-<<<<<<< HEAD
-
-    .section2 {
-        padding: 15% 5%;
-=======
     .signUpBtn:hover {
         opacity: 0.6;
     }
@@ -441,15 +376,11 @@ input.shorter:required{
     .section2 > p {
         width: 50%;
         margin: auto;
->>>>>>> 5efbd88... desktop design modifications and api function
     }
     .statisticsSection {
         display: flex;
         flex-direction: row;
-<<<<<<< HEAD
-=======
         margin-top: 10%;
->>>>>>> 5efbd88... desktop design modifications and api function
     }
     .imgIco{
         margin: 3%;
@@ -458,16 +389,6 @@ input.shorter:required{
     .imgIco>img{
         margin-left: 20px;
     }
-<<<<<<< HEAD
-    .statisticsSection > div {
-        margin: 1%;
-        text-align: left;
-        height: 230px;
-        padding: 3%;
-    }
-    .statisticsSection > hr{
-        display: none;
-=======
     .statisticsSection > div{
         margin: 0;
         text-align: left;
@@ -489,16 +410,12 @@ input.shorter:required{
     }
     .section3 {
         height: 245px;
->>>>>>> 5efbd88... desktop design modifications and api function
     }
     .boostMobile {
         display: none;
     }
     .boostStarted {
         padding: 2%;
-<<<<<<< HEAD
-        top:0;
-=======
         top: -255px;
     }
     .boostDesktop{
@@ -511,7 +428,6 @@ input.shorter:required{
         height: auto;
         width: auto;
         padding: 1% 3%;
->>>>>>> 5efbd88... desktop design modifications and api function
     }
     .footerSection{
         display: flex;
@@ -528,8 +444,4 @@ input.shorter:required{
         height: 40%;
     }
     
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> 5efbd88... desktop design modifications and api function
